working on match results page

--- a/tournaments/templates/tournaments/index.html
+++ b/tournaments/templates/tournaments/index.html
@@ -10,24 +10,23 @@
 </head>
 <body class="bg-gray-100">
 
-{% if scores %}
 <div class="px-8 py-14">
      <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
         <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
             <tr>
-                <th scope="col" class="px-6 py-3">Place</th>
-                <th scope="col" class="px-6 py-3">Friend</th>
-                {% for match in matches %}
-                    <th scope="col" class="px-6 py-3">{{ match.home_team.name }} - {{ match.away_team.name }}</th>
+                {% for table_header in table_headers %}
+                <th scope="col" class="px-6 py-3">{{ table_header }}</th>
                 {% endfor %}
             </tr>
         </thead>
         <tbody>
-        {% for score in scores %}
+        {% for row in rows %}
             <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
                 <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{forloop.counter}}</th>
-                <td class="px-6 py-4">{{score.prediction.friend.first_name}} {{score.prediction.friend.last_name}}</td>
-                <td class="px-6 py-4">{{score.score}}</td>
+                <td class="px-6 py-4">{{ row.name }}</td>
+                <td class="px-6 py-4">{{ row.score }}</td>
+<!--                <td class="px-6 py-4">{{row.prediction.friend.first_name}} {{row.prediction.friend.last_name}}</td>-->
+<!--                <td class="px-6 py-4">{{row.get_result_display}}</td>-->
             </tr>
         {% endfor %}
         </tbody>
@@ -35,8 +34,5 @@
     </table>
 </div>
 
-{% else %}
-    <p>No scores are available.</p>
-{% endif %}
 </body>
 </html>
