--- a/tournaments/templates/tournaments/index.html
+++ b/tournaments/templates/tournaments/index.html
@@ -22,8 +22,7 @@
         <tbody>
         {% for row in rows %}
             <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{forloop.counter}}</th>
-                <td class="px-6 py-4">{{ row.name }}</td>
+                <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ row.name }}</td>
                 <td class="px-6 py-4">{{ row.score }}</td>
             </tr>
         {% endfor %}
