--- a/tournaments/templates/tournaments/game_result.html
+++ b/tournaments/templates/tournaments/game_result.html
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HAHIMUR!</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'tournaments/css/output.css' %}" type="text/css"> <!-- We add the output Tailwind CSS here -->
-</head>
-<body class="bg-gray-100">
 
-<div class="px-8 py-14">
+{% extends "./base.html" %}
+{% block content %}
+<h2>{{ title }}</h2>
      <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
         <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
             <tr>
@@ -29,7 +20,4 @@
         </tbody>
 
     </table>
-</div>
-
-</body>
-</html>
+{% endblock %}
