--- a/tournaments/static/tournaments/css/input.css
+++ b/tournaments/static/tournaments/css/input.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h1 {
+    @apply text-4xl font-extrabold;
+  }
+  a {
+    @apply hover:underline;
+  }
+}
