--- a/tournaments/templates/tournaments/base.html
+++ b/tournaments/templates/tournaments/base.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="{% static 'tournaments/css/output.css' %}" type="text/css"> <!-- We add the output Tailwind CSS here -->
 </head>
 <body class="bg-gray-100">
+<header>
+    <h1 class="px-8 py-4"><a href="/tournaments">HAHIMUR</a></h1>
+</header>
 <div id="content" class="px-8 py-14">
     {% block content %}
     {% endblock %}
