--- a/tournaments/templates/tournaments/match_result.html
+++ b/tournaments/templates/tournaments/match_result.html
@@ -14,6 +14,7 @@
         {% for row in rows %}
             <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
                 <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ row.name }}</td>
+                <td class="px-6 py-4">{{ row.prediction }}</td>
                 <td class="px-6 py-4">{{ row.score }}</td>
             </tr>
         {% endfor %}
