--- a/tournaments/templates/tournaments/standings.html
+++ b/tournaments/templates/tournaments/standings.html
@@ -1,8 +1,24 @@
 {% extends "./base.html" %}
 
 {% block content %}
-  <h2>{{ tournament }}</h2>
-  {% for match in matches %}
-    <li><a href="/tournaments/matches/{{match.id}}">{{ match.stage.name }}, {{ match.home_team }} - {{ match.away_team }} ({{ match.start_time|date}})</a></li>
-  {% endfor %}
+  <h2>{{ title }}</h2>
+     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+            <tr>
+                {% for header in headers %}
+                <th scope="col" class="px-6 py-3">{{ header }}</th>
+                {% endfor %}
+            </tr>
+        </thead>
+        <tbody>
+        {% for row in rows %}
+            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+                <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ row.first_name }}</td>
+<!--                <td class="px-6 py-4">{{ row.prediction }}</td>-->
+                <td class="px-6 py-4">{{ row.total }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+
+    </table>
 {% endblock %}
