--- a/tournaments/templates/tournaments/standings.html
+++ b/tournaments/templates/tournaments/standings.html
@@ -13,7 +13,7 @@
         <tbody>
         {% for row in rows %}
             <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-                <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ row.first_name }}</td>
+                <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ row.full_name }}</td>
 <!--                <td class="px-6 py-4">{{ row.prediction }}</td>-->
                 <td class="px-6 py-4">{{ row.total }}</td>
             </tr>
