--- a/tournaments/templates/tournaments/base.html
+++ b/tournaments/templates/tournaments/base.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-{% load static %}
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HAHIMUR!</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'tournaments/css/output.css' %}" type="text/css"> <!-- We add the output Tailwind CSS here -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hahimur</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100">
-<header>
-    <h1 class="px-8 py-4"><a href="/tournaments">HAHIMUR</a></h1>
-</header>
+  <!-- Top Bar -->
+  <nav class="bg-blue-600 text-white">
+    <div class="container mx-auto flex justify-center items-center py-4">
+      <!-- Centered Title -->
+      <a href="/tournaments" class="text-xl font-bold">Hahimur</a>
+    </div>
+  </nav>
 <div id="content" class="px-8 py-14">
     {% block content %}
     {% endblock %}
@@ -19,3 +21,8 @@
 
 </body>
 </html>
+
+
+
+
+
