--- a/tournaments/templates/tournaments/matches.html
+++ b/tournaments/templates/tournaments/matches.html
@@ -1,7 +1,7 @@
 {% extends "./base.html" %}
 
 {% block content %}
-  <div class="container mx-auto py-8 px-6">
+<div class="container mx-auto py-8 px-6">
   <!-- Tournament Title -->
   <h1 class="text-2xl font-bold text-center mb-6">{{ tournament }}</h1>
 
@@ -19,14 +19,19 @@
         </thead>
         <tbody class="divide-y divide-gray-200">
           {% for match in matches %}
-            <tr>
+            <tr class="hover:bg-gray-50">
               <!-- Match Number -->
               <td class="py-3 px-6">{{ match.number }}</td>
               <!-- Stage -->
               <td class="py-3 px-6">{{ match.stage }}</td>
-              <!-- Match Info -->
+              <!-- Match Info (Clickable) -->
               <td class="py-3 px-6 font-semibold">
-                {{ match.str }}
+                <a
+                  href="/"
+                  class="text-blue-600 hover:text-blue-500 underline"
+                >
+                  {{ match.str }}
+                </a>
               </td>
               <!-- Start Time -->
               <td class="py-3 px-6">
