--- a/tournaments/templates/tournaments/matches.html
+++ b/tournaments/templates/tournaments/matches.html
@@ -1,6 +1,7 @@
   {% if matches %}
     <!-- Matches Table -->
     <div class="overflow-x-auto mt-10 mb-10">
+      <h3 class="text-xl font-semibold mb-4">Matches</h3>
       <table class="min-w-full bg-white shadow-md rounded-lg">
         <thead class="bg-blue-600 text-white">
           <tr>
