--- a/tournaments/templates/tournaments/friend.html
+++ b/tournaments/templates/tournaments/friend.html
@@ -12,7 +12,8 @@
   </div>
 
   <!-- Predictions -->
-  <div>
+  <div class="mt-10">
+      <h3 class="text-xl font-semibold mb-4">Match Points</h3>
     {% if predictions %}
       <div class="overflow-x-auto">
         <table class="min-w-full bg-white shadow-md rounded-lg">
@@ -42,6 +43,7 @@
   <div>
     {% if stage_points %}
       <div class="overflow-x-auto mt-10">
+        <h3 class="text-xl font-semibold mb-4">Stage Points</h3>
         <table class="min-w-full bg-white shadow-md rounded-lg">
           <thead class="bg-blue-600 text-white">
             <tr>
