--- a/tournaments/templates/tournaments/friend.html
+++ b/tournaments/templates/tournaments/friend.html
@@ -8,7 +8,7 @@
      <!-- Match Details -->
   <div class="bg-white shadow-md rounded-lg p-6 mb-8">
     <h2 class="text-xl font-semibold text-center mb-4">{{ friend }}</h2>
-    <p class="text-center text-gray-600 mb-2">Points: {{ total_points }}</p>
+    <p class="text-center text-gray-600 mb-2">Points: {{ total_points.points }}</p>
   </div>
 
   <!-- Predictions -->
@@ -66,7 +66,7 @@
       <p class="text-gray-600 text-left">No top scorer points for you!</p>
     {% endif %}
   </div>
-    <!-- Predictions -->
+    <!-- Stage Points -->
   <div class="mt-10">
      <h3 class="text-xl font-semibold mb-4">Stage Points</h3>
     {% if stage_points %}
