--- a/tournaments/templates/tournaments/standings.html
+++ b/tournaments/templates/tournaments/standings.html
@@ -1,24 +1,38 @@
 {% extends "./base.html" %}
 
 {% block content %}
-  <h2>{{ title }}</h2>
-     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+<div class="container mx-auto py-8 px-6">
+  <!-- Tournament Name -->
+  <h1 class="text-2xl font-bold text-center mb-6">{{ tournament.name }}</h1>
+    <div class="mt-10">
+     <h3 class="text-xl font-semibold mb-4">Standings</h3>
+    {% if total_points %}
+      <div class="overflow-x-auto">
+        <table class="table-auto bg-white shadow-md rounded-lg">
+          <thead class="bg-blue-600 text-white">
             <tr>
-                {% for header in headers %}
-                <th scope="col" class="px-6 py-3">{{ header }}</th>
-                {% endfor %}
+              <th class="py-3 px-6 text-left group">Name</th>
+              <th class="py-3 px-6 text-left group">Points</th>
             </tr>
-        </thead>
-        <tbody>
-        {% for row in rows %}
-            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-                <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ row.full_name }}</td>
-<!--                <td class="px-6 py-4">{{ row.prediction }}</td>-->
-                <td class="px-6 py-4">{{ row.total }}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-
-    </table>
+          </thead>
+          <tbody class="divide-y divide-gray-200">
+            {% for total_point in total_points %}
+              <tr class="hover:bg-gray-50">
+                <td class="py-3 px-6">
+                    <a href="/tournaments/{{tournament.tournament_id}}/friend/{{total_point.friend.friend_id}}"
+                    class="text-blue-600 hover:text-blue-500 underline">
+                        {{ total_point.friend.name }}
+                    </a>
+                </td>
+                <td class="py-3 px-6">{{ total_point.points }}</td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+    {% else %}
+      <p class="text-left text-gray-600">No stage points for you!</p>
+    {% endif %}
+  </div>
+</div>
 {% endblock %}
