--- a/tournaments/templates/tournaments/standings.html
+++ b/tournaments/templates/tournaments/standings.html
@@ -31,7 +31,7 @@
         </table>
       </div>
     {% else %}
-      <p class="text-left text-gray-600">No stage points for you!</p>
+      <p class="text-left text-gray-600">No standings for you!</p>
     {% endif %}
   </div>
 </div>
